# RBOT250-AssignmentWeek3

./: README.md
install/: local_setup.sh  setup.sh
install/rbot250/lib/rbot250/: cpp_node  py_node.py
install/rbot250/share/ament_index/resource_index/package_run_dependencies/: rbot250
install/rbot250/share/rbot250/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/rbot250/share/rbot250/launch/: rbot250.launch.py
install/rbot250_srv/lib/rbot250_srv/: client  service
install/rbot250_srv/share/rbot250_srv/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/rbot250/: CMakeLists.txt
src/rbot250/scripts/: py_node.py
src/rbot250/src/: cpp_node.cpp
src/rbot250_srv/: setup.cfg  setup.py
src/rbot250_srv/rbot250_srv/: client_member_function.py
